infrastructure/k8s_configs/nginx/nginx-web.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-web
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: nginx-web
spec:
  clusterIP: None
  ports:
  - name: web
    port: 80
    targetPort: 80
  selector:
    app: web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
  namespace: nginx-web
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: registry.nepeat.com/nginx-web:v3
        volumeMounts:
        - mountPath: /var/www
          name: web-data
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
      restartPolicy: Always
      volumes:
        - name: web-data
          hostPath:
            path: /mnt/nfs/var/www
            type: DirectoryOrCreate
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # ingress
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    # tls
    kubernetes.io/tls-acme: 'true'
  name: web-ingress
  namespace: nginx-web
spec:
  tls:
  - hosts:
    - nepeat.com
    secretName: nepeatweb-tls
  rules:
  - host: nepeat.com
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    # ingress
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1200"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1200"
    # tls
    kubernetes.io/tls-acme: 'true'
  name: fuckingsoyweb-ingress
  namespace: nginx-web
spec:
  tls:
  - hosts:
    - fucking.soy
    - www.fucking.soy
    secretName: fuckingsoyweb-tls
  rules:
  - host: fucking.soy
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
  - host: www.fucking.soy
    http:
      paths:
      - backend:
          serviceName: web
          servicePort: 80
